[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["mihaihutan <hutanmihai29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
jupyter = "^1.0.0"
scikit-image = "^0.19.3"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
tqdm = "^4.65.0"
pygame = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
