cmake_minimum_required(VERSION 3.21)
project(Laborator)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Laborator lab1ex1.cpp)
#add_executable(Laborator lab1ex2.cpp)
#add_executable(Laborator lab2.cpp)
add_executable(Laborator lab3ex2.cpp)
#add_executable(Laborator lab3ex3.cpp)
#add_executable(Laborator lab3ex4.cpp)
#add_executable(Laborator lab4ex1.cpp)
#add_executable(Laborator lab4ex2.cpp)
#add_executable(Laborator lab4ex3.cpp)
#add_executable(Laborator lab4ex4.cpp)
#add_executable(Laborator lab4ex5.cpp)
#add_executable(Laborator lab5ex1.cpp)
#add_executable(Laborator lab5ex2.cpp)
#add_executable(Laborator lab5ex3.cpp)
#add_executable(Laborator lab6ex1.cpp)
#add_executable(Laborator lab6ex2.cpp)
#add_executable(Laborator lab6ex3.cpp)
#add_executable(Laborator lab6ex4.cpp)
#add_executable(Laborator lab6ex5.cpp)
#add_executable(Laborator lab6ex6.cpp)